# CAD-A_Qt

./: CAD-A_Qt.pro  CAD-A_Qt.pro.user.00e1315  CAD-A_Qt.pro.user.2e56bc9  CAD-A_Qt.pro.user.c7c5dca  CAD-A_Qt.pro.user.ff4c333  CMakeLists.txt  README.md  antennaArrayParametersHex.cpp  antennaArrayParametersHex.h  antennaArrayParametersHex.ui  antennaArrayParametersRect.cpp  antennaArrayParametersRect.h  antennaArrayParametersRect.ui  antenna_array_parameters_hex.cpp  antenna_array_parameters_hex.h  antenna_array_parameters_hex.ui  antenna_array_parameters_rect.cpp  antenna_array_parameters_rect.h  arrangementOfElements.cpp  arrangementOfElements.h  arrangementOfElements.ui  arrangement_of_elements.cpp  arrangement_of_elements.h  arrangement_of_elements.ui  cadAMath.cpp  cadAMath.h  calcParam.cpp  calcParam.h  calcParam.ui  carrierParameters.cpp  carrierParameters.h  carrierParameters.ui  channelParameters.cpp  channelParameters.h  channelParameters.ui  chartsParameters.cpp  chartsParameters.h  chartsParameters.ui  echoSignal.cpp  echoSignal.h  (+39 more)
headers/: antennaArrayParametersHex.h  antennaArrayParametersRect.h  arrangementOfElements.h  calcParam.h  carrierParameters.h  channelParameters.h  echoSignal.h  mainwindow.h  patternCharts.h  reverberationParameters.h
src/: antennaArrayParametersHex.cpp  antennaArrayParametersRect.cpp  arrangementOfElements.cpp  cadAMath.cpp  calcParam.cpp  carrierParameters.cpp  channelParameters.cpp  chartsParameters.cpp  echoSignal.cpp  mainwindow.cpp  operatingSystemParameters.cpp  patternCharts.cpp  plot3d.cpp  reverberationParameters.cpp  selectWeight.cpp  selectionOfCorrectiveElements.cpp  workingEnvironmentSettings.cpp
